--- a/smartphone/styles.css
+++ b/smartphone/styles.css
@@ -7,7 +7,7 @@ body {
   line-height: 1.6;
   overflow-x: hidden;
   background-image: url("img/background.png");
-  background-size: cover;
+  background-size: auto;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center top;
